--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : LocalUp Policies
+title : OrderUp Policies
 tagline: 
 author : 
-  name : LocalUp
-  email : support@localup.com
+  name : OrderUp
+  email : support@OrderUp.com
   github : 
-  twitter : @LocalUp
+  twitter : @OrderUp
   feedburner : 
 
 # The production_url is only used when full-domain names are needed
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://localup.com/policies
+production_url : http://OrderUp.com/policies
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
